# python-benchmark-tasks

./: .gitignore  README.md  pyproject.toml
benchmarks/task_01_data_processing/: benchmark.py  buggy.py  explanation.md  fixed.py
benchmarks/task_02_performance_comparison/: benchmark.py  buggy.py  explanation.md  fixed.py
benchmarks/task_03_shared_state_bug/: benchmark.py  buggy.py  explanation.md  fixed.py
data/: large_dataset.csv
tests/: test_task_01.py  test_task_02.py  test_task_03.py
utils/: data_generator.py  timer.py
